gamebundle devient userbundle

--- a/src/UserBundle/Resources/views/Default/form.html.twig
+++ b/src/UserBundle/Resources/views/Default/form.html.twig
@@ -1,6 +1,6 @@
-{# src/GameBundle/Resources/views/Default/form.html.twig #}
+{# src/UserBundle/Resources/views/Default/form.html.twig #}
 
-{% extends "GameBundle::layout.html.twig" %}
+{% extends "UserBundle::layout.html.twig" %}
 
 {% block title %}{{ parent() }} - View{% endblock %}
 
