--- a/src/UserBundle/Resources/views/Default/view.html.twig
+++ b/src/UserBundle/Resources/views/Default/view.html.twig
@@ -1,5 +1,5 @@
-{# src/GameBundle/Resources/view/Default/view.html.twig #}
-{% extends "GameBundle::layout.html.twig" %}
+{# src/UserBundle/Resources/view/Default/view.html.twig #}
+{% extends "UserBundle::layout.html.twig" %}
 
 {% block title %}{{ parent() }} - View{% endblock %}
 
