essai connexion user

--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
  
     <h2>page index</h2>
 
-    <p><a href=" {{ path('game_login') }} ">CONNEXION</a></p>
-    <p><a href=" {{ path('game_signup') }} ">INSCRIPTION</a></p>
+    <p><a href=" {{ path('login') }} ">CONNEXION</a></p>
+    <p><a href=" {{ path('signup') }} ">INSCRIPTION</a></p>
 
 {% endblock %}
