--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -9,9 +9,12 @@
       <p>Message flash : {{ message }}</p>
     {% endfor %}
  
-    <h2>page index</h2>
+    <h2>page d'accueil</h2>
 
-    <p><a href=" {{ path('login') }} ">CONNEXION</a></p>
-    <p><a href=" {{ path('signup') }} ">INSCRIPTION</a></p>
-
+    {% if app.user %}
+      <p>Bienvenue {{ app.user.username }} ! </p>
+    {% else %}
+      <p><a href=" {{ path('login') }} ">CONNEXION</a></p>
+      <p><a href=" {{ path('signup') }} ">INSCRIPTION</a></p>
+    {% endif %}
 {% endblock %}
