debut formulaire questions, entites et base de donnees complets

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,10 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+            <div class="container-fluid">
+                {% block body %}{% endblock %}
+            </div>
+        
 
         <footer>
             {#<p> © Application ludique pour l'enseignement 2017 - Claire Serra</p>#}
