mise en place des routes

--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -11,10 +11,27 @@
  
     <h2>page d'accueil</h2>
 
-    {% if app.user %}
-      <p>Bienvenue {{ app.user.username }} ! </p>
+    {% if app.user and app.user.role == 'famille' %}
+      <p>Bienvenue famille {{ app.user.username }} ! </p>
+      <p>Faites votre choix :</p>
+      <p><a href=" {{ path('select_gamers') }} ">JOUER</a></p>
+      <p><a href=" {{ path('check_scores') }} ">CONSULTER LES SCORES</a></p>
+      <p><a href=" {{ path('admin_gamers') }} ">GESTION DES JOUEURS</a></p>
+      <p><a href=" {{ path('suggest_question') }} ">PROPOSER DES QUESTIONS</a></p>
+    
+    {% elseif app.user and app.user.role == 'admin' %}
+        <p>Bienvenue {{ app.user.username }} ! </p>
+        <p>Faites votre choix :</p>        
+        <p><a href=" {{ path('admin_users') }} ">GESTION DES COMPTES UTILISATEURS</a></p>
+        <p><a href=" {{ path('add_question') }} ">AJOUTER DES QUESTIONS</a></p>
+        <p><a href=" {{ path('moderate_question') }} ">MODERATION DES QUESTIONS</a></p>
+        <p><a href=" {{ path('check_scores') }} ">CONSULTER LES SCORES</a></p>
+    
     {% else %}
       <p><a href=" {{ path('login') }} ">CONNEXION</a></p>
       <p><a href=" {{ path('signup') }} ">INSCRIPTION</a></p>
     {% endif %}
+
+
+
 {% endblock %}
