--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -9,7 +9,7 @@
       <p>Message flash : {{ message }}</p>
     {% endfor %}
  
-    <h2>Formulaire de questions</h2>
+    <h2>{{ title }}</h2>
     <div class="row">
         <div class="col-lg-offset-2 col-lg-8">
             <div class="well">
@@ -39,11 +39,11 @@
                     {{ form_errors(form.subject) }}
                     {{ form_widget(form.subject) }}
                 </div>
-                <div class="form-group">
-                    {{ form_label(form.subject.topic) }}
-                    {{ form_errors(form.subject.topic) }}
-                    {{ form_widget(form.subject.topic, {'attr': {'class': 'form-control'}}) }}
-                </div>
+                  <div class="form-group">
+                      {{ form_label(form.subject.topic) }}
+                      {{ form_errors(form.subject.topic) }}
+                      {{ form_widget(form.subject.topic, {'attr': {'class': 'form-control'}}) }}
+                  </div>
                 
                 {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
