--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -36,9 +36,9 @@
                     {{ form_widget(form.difficulty, {'attr': {'class': 'form-control'}}) }}
                 </div>
                 <div class="form-group">
-                    {{ form_label(form.subject.subject) }}
-                    {{ form_errors(form.subject.subject) }}
-                    {{ form_widget(form.subject.subject) }}
+                    {{ form_label(form.subject.nameSubject) }}
+                    {{ form_errors(form.subject.nameSubject) }}
+                    {{ form_widget(form.subject.nameSubject) }}
                 </div>
                 <div class="form-group form_subject_topic">
                     {{ form_label(form.subject.topics) }}
@@ -58,10 +58,11 @@
 
     <script type="text/javascript">
     $(function () {
+        var subjectField = $('#GameBundle_question_subject_nameSubject');
         var topicField = $('#GameBundle_question_subject_topics');
         var topicGroup = $('.form_subject_topic');
 
-        $('#GameBundle_question_subject_subject').on('change', function () {
+        subjectField.on('change', function () {
             var id_subject = $(this).val();
             $.ajax({
                 url: "{{ path('combobox') }}",
@@ -71,7 +72,7 @@
                 success: function (response) {
                     topicField.html('');
                     $.each(response, function (index, value) {
-                        topicField.append('<option value="' + value.id + '">' + value.topic + '</option>');
+                        topicField.append('<option value="' + value.id + '">' + value.nameTopic + '</option>');
                     });
                     topicGroup.show();
                 },
