--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -39,15 +39,15 @@
                     {{ form_widget(form.difficulty, {'attr': {'class': 'form-control'}}) }}
                 </div>
                 <div class="form-group">
-                    {{ form_label(form.subject) }}
-                    {{ form_errors(form.subject) }}
-                    {{ form_widget(form.subject) }}
+                    {{ form_label(form.topic.subject) }}
+                    {{ form_errors(form.topic.subject) }}
+                    {{ form_widget(form.topic.subject) }}
                 </div>
-                {#<div class="form-group form_subject_topic">
-                    {{ form_label(form.subject.topics) }}
-                    {{ form_errors(form.subject.topics) }}
-                    {{ form_widget(form.subject.topics) }}
-                </div>#}
+                <div class="form-group form_subject_topic">
+                    {{ form_label(form.topic.nameTopic) }}
+                    {{ form_errors(form.topic.nameTopic) }}
+                    {{ form_widget(form.topic.nameTopic) }}
+                </div>
                 
                 {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
@@ -61,8 +61,8 @@
 
     <script type="text/javascript">
     $(function () {
-        var subjectField = $('#GameBundle_question_subject_nameSubject');
-        var topicField = $('#GameBundle_question_subject_topics');
+        var subjectField = $('#GameBundle_question_topic_subject');
+        var topicField = $('#GameBundle_question_topic_topic');
         var topicGroup = $('.form_subject_topic');
 
         subjectField.on('change', function () {
