--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -39,15 +39,15 @@
                     {{ form_widget(form.difficulty, {'attr': {'class': 'form-control'}}) }}
                 </div>
                 <div class="form-group">
-                    {{ form_label(form.topic.subject) }}
-                    {{ form_errors(form.topic.subject) }}
-                    {{ form_widget(form.topic.subject) }}
+                    {{ form_label(form.topic) }}
+                    {{ form_errors(form.topic) }}
+                    {{ form_widget(form.topic) }}
                 </div>
-                <div class="form-group form_subject_topic">
+                {#<div class="form-group form_subject_topic">
                     {{ form_label(form.topic.nameTopic) }}
                     {{ form_errors(form.topic.nameTopic) }}
                     {{ form_widget(form.topic.nameTopic) }}
-                </div>
+                </div>#}
                 
                 {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
