--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -43,7 +43,13 @@
                     {{ form_errors(form.topic) }}
                     {{ form_widget(form.topic) }}
                 </div>
-                {#<div class="form-group form_subject_topic">
+                {#plan A not working#}
+                {#<div class="form-group">
+                    {{ form_label(form.topic.subject) }}
+                    {{ form_errors(form.topic.subject) }}
+                    {{ form_widget(form.topic.subject) }}
+                </div>
+                <div class="form-group form_subject_topic">
                     {{ form_label(form.topic.nameTopic) }}
                     {{ form_errors(form.topic.nameTopic) }}
                     {{ form_widget(form.topic.nameTopic) }}
