Ok pour moderation formulaire, revoir removeAnswer et apparition des champs answers selon la page

--- a/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
@@ -16,7 +16,7 @@
         <th>Question</th>
         <th>Matière</th>
         <th>Auteur</th>        
-        <th>Validation</th>
+        <th>Modération</th>
       </tr>
       {% for notValidQuestion in notValidQuestions %}
         <tr>
