--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -60,15 +60,16 @@
                 {{ form_rest(form) }}
                 {{ form_end(form) }}
             </div>
+            
         </div>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
     <script type="text/javascript">
     $(function () {
 
 //combobox subject + topic
+/*
         var subjectField = $('#GameBundle_question_topic_subject');
         var topicField = $('#GameBundle_question_topic_topic');
         var topicGroup = $('.form_subject_topic');
@@ -92,32 +93,51 @@
                 }
             });
         });
+*/
 
 // Ajouter ou supprimer une réponse
         var $container = $('div#GameBundle_question_answers');
         var index = $container.find(':input').length;
+        var urlValidation = 'http://jeudeloie/app_dev.php/question/suggest';
+        var labelAnswers = $('#GameBundle_question_answers>.form-group label');
+        var deleteButton = $('.deleteButton');
 
-        if (document.location.href !== 'http://jeudeloie/app_dev.php/question/validate/20') {
+        if (document.location.href.indexOf(urlValidation) > -1) {
             addAnswer($container);
             addAnswer($container);        
+        } else {
+            labelAnswers.each(function(index) {
+                if (index === 0) {
+                    $(this).text('Bonne réponse');
+                } else {
+                    $(this).text('Mauvaise réponse');                    
+                }
+            });
+            addDeleteLink($('#GameBundle_question_answers>.form-group:gt(1)'));
         }
-
-        $('#valid_answer').on('click', function () {
-            var answers = $('#GameBundle_question_answers input');
-            var answersArray = [];
-
-            answers.each(function() {
-                answersArray.push($(this).val());  
-            })
-
-            $('div.form_answers').after('<div><select></select</div>');
-
-        });
 
         $('#add_answer').on('click', function (e) {
             addAnswer($container);
             e.preventDefault();
             return false;
+        });
+
+        deleteButton.on('click', function () {
+            var id_answer;
+            if (id_answer === null) {
+                return false;
+            } else {
+                {% for answer in answers %}
+                    id_answer = {{ answer.id }}
+                {% endfor %}
+            }
+
+            $.ajax({
+                url: "{{ path('remove_answer') }}",
+                type: 'POST',
+                data: { 'id': id_answer },
+                dataType: 'json',
+            });
         });
         
     // functions
@@ -133,9 +153,7 @@
                 .replace(/__name__label__/g, 'Mauvaise réponse')
                 .replace(/__name__/g, index)
                 ;
-            }
-            
-            
+            }            
             var $prototype = $(template);
             if (index > 1) {
                 addDeleteLink($prototype);
@@ -145,7 +163,7 @@
         }
 
         function addDeleteLink($prototype) {
-            var $deleteLink = $('<a href="#" class="btn btn-danger">X</a>');
+            var $deleteLink = $("<a href='#' class='btn btn-danger deleteButton'>X</a>");
             $($prototype).append($deleteLink);
             $deleteLink.on('click', function (e) {
                 $prototype.remove();
