--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,10 +12,33 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
-                {% block body %}{% endblock %}
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{{ path('homepage') }}">Le jeu de l'oie ludique</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Accueil</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Le jeu <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Jouer</a></li>
+                            <li><a href="#">Scores</a></li>
+                            <li><a href="#">Administration</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Page 2</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Inscription</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                </ul>
             </div>
-        
+        </nav>
+
+        <div class="container-fluid">
+            {% block body %}{% endblock %}
+        </div>
 
         <footer>
             {#<p> © Application ludique pour l'enseignement 2017 - Claire Serra</p>#}
@@ -23,7 +46,7 @@
 
         {% block javascripts %}
             <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-            <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
             {#<script src="{{ asset('bundles/GameBundle/myscript.js') }}"></script>#}
         {% endblock %}
     </body>
