--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -32,6 +32,10 @@
                 </div>
                 <div class="form-group">
                     {{ form_row(form.topic) }}
+                    <a href="" id="add_topic" class="btn btn-default">Ajouter un thème</a>                
+                </div>
+                <div class="form-group form_add_topic">
+                    {{ form_row(form.addTopic) }}
                 </div>
                 {#plan A not working#}
                 {#<div class="form-group">
@@ -84,10 +88,11 @@
 // Ajouter ou supprimer une réponse
         var $container = $('div#GameBundle_question_answers');
         var nbAnswer = $container.find(':input[type="text"]').length;
-        var urlValidation = 'http://jeudeloie/app_dev.php/question/validate';
+        var urlValidation = '{{ path("validate_question") }}';
         var labelAnswers = $('#GameBundle_question_answers>.form-group label');
         var deleteButton = $('.deleteButton');
 
+        alert(urlValidation);
         if (document.location.href.indexOf(urlValidation) != 0) {
             addAnswer($container);
             addAnswer($container);        
@@ -110,6 +115,9 @@
         });
         
     // functions
+            
+
+
         function addAnswer($container) {
             var template;
             if(nbAnswer === 0) {
